--- a/src/deployer/package.json
+++ b/src/deployer/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.18.2",
     "commander": "^2.12.2",
     "express": "^4.16.2",
+    "js-yaml": "^3.10.0",
     "mustache": "^2.3.0",
     "serverless": "^1.25.0"
   }
